--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ nav {
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: blanchedalmond;
+    background-color: #eee;
 }
 
 nav div a img {
@@ -39,14 +39,29 @@ nav ul a {
 }
 
 #home {
-    background-color: #ccc;
     height: 100vh;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+#homeTxt {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+#homeImg {
+    background-image: url("img/logo2.jpg");
+    background-size: cover;
+    background-position: center; 
 }
 
 #about {
+    background-image: url("img/background.png");
+    background-size: cover;
+    background-position: center;
     background-color: #eee;
     height: 100vh;
     display: flex;
