--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ nav {
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: #eee;
+    background-color: white;
 }
 
 nav div a img {
@@ -39,6 +39,8 @@ nav ul a {
 }
 
 #home {
+    background-size: cover;
+    background-position: center; 
     height: 100vh;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -59,7 +61,7 @@ nav ul a {
 }
 
 #about {
-    background-image: url("img/background.png");
+    background-image: url("img/background4.png");
     background-size: cover;
     background-position: center;
     background-color: #eee;
@@ -70,7 +72,9 @@ nav ul a {
 }
 
 #services {
-    background-color: #ccc;
+    background-image: url("img/background5.png");
+    background-size: cover;
+    background-position: center; 
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -78,7 +82,9 @@ nav ul a {
 }
 
 #contact {
-    background-color: #eee;
+    background-image: url("img/background6.png");
+    background-size: cover;
+    background-position: center;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -86,7 +92,9 @@ nav ul a {
 }
 
 #links {
-    background-color:#ccc;
+    background-image: url("img/background7.png");
+    background-size: cover;
+    background-position: center;
     height: 100vh;
     display: flex;
     justify-content: center;
